# thinking_in_code

./: .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.worker  LICENSE  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 0001-initial-architecture.md
infra/docker/: README.md  api.Dockerfile  docker-compose.yml  worker.Dockerfile
libs/contracts/: pyproject.toml
libs/contracts/src/podcastify_contracts/: __init__.py  errors.py  podcast_job.py  retrieval.py
libs/podcast/: pyproject.toml  requirements.in  requirements.optional.in
libs/podcast/src/podcastify_podcast/application/: ports.py  retrieval.py  use_cases.py
libs/podcast/src/podcastify_podcast/domain/: models.py
libs/podcast/src/podcastify_podcast/infrastructure/: logging.py  metrics.py
libs/podcast/src/podcastify_podcast/infrastructure/audio/: audio_quality.py  pacing.py  pydub_assembler.py
libs/podcast/src/podcastify_podcast/infrastructure/embedding/: sentence_transformers.py
libs/podcast/src/podcastify_podcast/infrastructure/llm/: ollama.py  openrouter.py
libs/podcast/src/podcastify_podcast/infrastructure/pdf/: extractors.py
libs/podcast/src/podcastify_podcast/infrastructure/retrieval/: chroma_store.py  faiss_store.py  local_store.py  rrf.py
libs/podcast/src/podcastify_podcast/infrastructure/script/: openrouter_writer.py  script_writer.py
libs/podcast/src/podcastify_podcast/infrastructure/storage/: fs_store.py
libs/podcast/src/podcastify_podcast/infrastructure/text/: chunking.py  normalize.py  overlap.py
libs/podcast/src/podcastify_podcast/infrastructure/tts/: coqui_adapter.py  minimax_adapter.py  piper_adapter.py  pyttsx3_adapter.py
libs/podcast/tests/: test_audio_assembler.py  test_pacing.py  test_pipeline.py  test_retrieval.py  test_script_writer.py  test_text_processing.py
prompts/: script_system.md  script_user.md
scripts/: enqueue_redis_job.py  evaluate_script.py  smoke_test.sh
services/api/: pyproject.toml  requirements.in
services/api/src/podcastify_api/: main.py  queue.py
services/api/static/: app.js  index.html  styles.css
services/worker/: pyproject.toml  requirements.in
services/worker/src/podcastify_worker/: dir_queue.py  file_queue.py  main.py  redis_queue.py
