[project]
name = "podcastify-contracts"
version = "0.1.0"
description = "Shared Pydantic contracts for Podcastify services."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
