[project]
name = "podcastify-podcast"
version = "0.1.0"
description = "Podcast generation engine (clean architecture)."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27",
  "rich>=13.7",
  "podcastify-contracts>=0.1.0",
  "pdfplumber>=0.11",
  "pytesseract>=0.3",
  "pyttsx3>=2.90",
  "pydub>=0.25",
  "pymupdf>=1.24",
  "rank-bm25>=0.2.2",
  "pyloudnorm>=0.1.1",
]

[project.optional-dependencies]
retrieval = [
  "chromadb>=0.5",
  "sentence-transformers>=3.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
