[project]
name = "podcastify-api"
version = "0.1.0"
description = "Thinking in Code API service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "podcastify-contracts>=0.1.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
